@@ -777,9 +777,16 @@ ideas = {
 		}
 		GRE_greece_air_idea = {
 			allowed = { always = yes }
-			picture = gre_army_idea
+			picture = gre_airforce_idea
 			modifier = {
 				custom_modifier_tooltip = GRE_greece_air_idea_tt
+			}
+		}
+		GRE_greece_fleet_idea = {
+			allowed = { always = yes }
+			picture = gre_fleet_idea
+			modifier = {
+				custom_modifier_tooltip = GRE_greece_fleet_idea_tt
 			}
 		}
 	}
@@ -922,6 +929,29 @@ ideas = {
 					}
 				}
 			}
+			GRE_fleet_combat_support = {
+				picture = sov_mto_idea
+				allowed = {
+					always = no
+				}
+				modifier = {
+					navy_max_range_factor = 0.10
+					naval_invasion_penalty = -0.15
+					naval_mine_hit_chance = -0.03
+				}
+			}
+			GRE_fleet_service_support = {
+				picture = sov_mto_idea
+				allowed = {
+					always = no
+				}
+				modifier = {
+					convoy_escort_efficiency = 0.10
+					convoy_retreat_speed = 0.10
+					naval_accidents_chance = -0.05
+				}
+			}
 		}
 	}
+	
 
