@@ -708,7 +708,7 @@ focus_tree = {
 		id = GRE_harf
 		icon = Hellenic_Air_Force_1
 
-		x = 1
+		x = 0
 		y = 1
 		relative_position_id = GRE_h_armed
 
@@ -999,7 +999,7 @@ focus_tree = {
 		id = GRE_arm
 		icon = Hellenic_Army_1
 
-		x = -5
+		x = -6
 		y = 1
 		relative_position_id = GRE_h_armed
 
@@ -1268,7 +1268,7 @@ focus_tree = {
 		id = GRE_h_navy
 		icon = Hellenic_Navy_1
 
-		x = 7
+		x = 6
 		y = 1
 		relative_position_id = GRE_h_armed
 
@@ -1300,7 +1300,7 @@ focus_tree = {
 		y = 1
 		relative_position_id = GRE_h_navy
 
-		cost = 10
+		cost = 7
 
 		prerequisite = { focus = GRE_h_navy }
 
@@ -1319,6 +1319,54 @@ focus_tree = {
 			}
 			set_temp_variable = { GRE_debt_change = 0.1 }
 			update_greek_debt = yes
+			add_ideas = GRE_greece_fleet_idea
+		}
+
+		ai_will_do = {
+			base = 1
+		}
+	}
+
+	focus = {
+		id = GRE_fleet_combat_support_arms
+		icon = frigates
+
+		x = -1
+		y = 2
+		relative_position_id = GRE_h_navy
+
+		cost = 5
+
+		prerequisite = { focus = GRE_turk_naval }
+
+		completion_reward = {
+			log = "[GetDateText]: [This.GetName]: focus GRE_fleet_combat_support_arms executed"
+			add_ideas = GRE_fleet_combat_support
+			set_temp_variable = { treasury_change = -0.2 }
+			modify_treasury_effect = yes
+		}
+
+		ai_will_do = {
+			base = 1
+		}
+	}
+	focus = {
+		id = GRE_fleet_service_support_arms
+		icon = Generic_CIWS
+
+		x = 1
+		y = 2
+		relative_position_id = GRE_h_navy
+
+		cost = 5
+
+		prerequisite = { focus = GRE_turk_naval }
+
+		completion_reward = {
+			log = "[GetDateText]: [This.GetName]: focus GRE_fleet_service_support_arms executed"
+			add_ideas = GRE_fleet_service_support
+			set_temp_variable = { treasury_change = -0.2 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -1328,15 +1376,16 @@ focus_tree = {
 
 	focus = {
 		id = GRE_nav_sub_1
-		icon = submarines
+		icon = Generic_Submarine2
 
 		x = 0
-		y = 1
+		y = 2
 		relative_position_id = GRE_turk_naval
 
-		cost = 5.72
+		cost = 5
 
-		prerequisite = { focus = GRE_turk_naval }
+		prerequisite = { focus = GRE_fleet_combat_support_arms }
+		prerequisite = { focus = GRE_fleet_service_support_arms }
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus GRE_nav_sub_1 executed"
@@ -1365,13 +1414,13 @@ focus_tree = {
 
 	focus = {
 		id = GRE_nuclear_sub
-		icon = wolfpacks
+		icon = Generic_Submarine1
 
 		x = 0
 		y = 1
 		relative_position_id = GRE_nav_sub_1
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = GRE_nav_sub_1 }
 		prerequisite = { focus = GRE_surface_fleet }
@@ -1398,13 +1447,13 @@ focus_tree = {
 
 	focus = {
 		id = GRE_rule_of_the_sea
-		icon = long_and_proud_tradition
+		icon = no_blueprint_ship
 
 		x = 0
 		y = 1
 		relative_position_id = GRE_nuclear_sub
 
-		cost = 7.15
+		cost = 5
 
 		prerequisite = { focus = GRE_nuclear_sub }
 
@@ -1420,15 +1469,15 @@ focus_tree = {
 
 	focus = {
 		id = GRE_radar
-		icon = construction2
+		icon = army_radar
 
 		x = 2
-		y = 1
+		y = 2
 		relative_position_id = GRE_turk_naval
 
-		cost = 5.72
+		cost = 5
 
-		prerequisite = { focus = GRE_turk_naval }
+		prerequisite = { focus = GRE_fleet_service_support_arms }
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus GRE_radar executed"
@@ -1452,15 +1501,16 @@ focus_tree = {
 
 	focus = {
 		id = GRE_surface_fleet
-		icon = coastal_fort
+		icon = focus_ARG_study_the_battle_of_the_river_plate
 
 		x = -2
-		y = 1
+		y = 2
 		relative_position_id = GRE_turk_naval
 
-		cost = 5.72
+		cost = 5
 
-		prerequisite = { focus = GRE_turk_naval }
+		prerequisite = { focus = GRE_fleet_combat_support_arms }
+		prerequisite = { focus = GRE_fleet_combat_support_arms }
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus GRE_surface_fleet executed"
