@@ -199,3 +199,37 @@ defined_text = {
 		localization_key = GRE_AirSupport_loc1
 	}
 }
+
+######Navy Combat Support Arms#####
+defined_text = {
+	name = GRE_NavyCombat_loc
+
+	text = { 
+		trigger = {
+			has_idea = GRE_fleet_combat_support
+		}
+		localization_key = GRE_NavyCombat_loc1
+	}
+}
+######Navy Combat Service Arms#####
+defined_text = {
+	name = GRE_NavyCombat_loc
+
+	text = { 
+		trigger = {
+			has_idea = GRE_fleet_combat_support
+		}
+		localization_key = GRE_NavyCombat_loc1
+	}
+}
+######Navy Service Support#####
+defined_text = {
+	name = GRE_NavyService_loc
+
+	text = { 
+		trigger = {
+			has_idea = GRE_fleet_service_support
+		}
+		localization_key = GRE_NavyService_loc1
+	}
+}
