@@ -4643,6 +4643,10 @@ spriteTypes = {
 		texturefile = "gfx/interface/ideas/greece/gre_army_idea.dds"
 	}
 	spriteType ={
+		name = "GFX_idea_gre_fleet_idea"
+		texturefile = "gfx/interface/ideas/greece/gre_fleet_idea.dds"
+	}
+	spriteType ={
 		name = "GFX_idea_Greenlandhouse"
 		texturefile = "gfx/interface/ideas/greenland/Greenlandhouse.png"
 	}
