@@ -570,6 +570,10 @@
  GRE_merge_def_desc: "Merging certain defense industries can at the very least decrease the bloated bureaucracy present when dealing with multiple small industries, as opposed to one big one. Additionally, these industries produce the same products, and the process would become more seamless and efficient if cooperation was increased where it wasn't already present."
  GRE_subsidize_eas: "Subsidize EAS"
  GRE_subsidize_eas_desc: "EAS (Hellenic Defense Systems) is the main Greek producer of weapons for our military, but it is, however, facing severe economic problems. Therefore, we will need to financially support EAS in order to keep one of our main domestic weapon producers supporting our military."
+ GRE_fleet_combat_support_arms: "Navy Combat Support Arms"
+ GRE_fleet_combat_support_arms_desc: "We will expand the financing of our fleet's structures to increase its efficiency."
+ GRE_fleet_service_support_arms: "Navy Combat Service Support"
+ GRE_fleet_service_support_arms_desc: "We will expand the financing of our fleet's structures to increase its efficiency."
 
  #Events
  greece.1.t: "Outrage Amidst New Austerity Policies"
@@ -679,6 +683,9 @@
  GRE_army_service_support: "Service Support Corps"
  GRE_army_logistic_corps: "Logistic Corps"
  GRE_greece_air_idea: "Hellenic Air Force"
+ GRE_greece_fleet_idea: "Hellenic Navy"
+ GRE_fleet_combat_support: "Fleet Combat Support Arms"
+ GRE_fleet_service_support: "Fleet Combat Service Support"
 
  #SPECIAL OPERATIONS FORCES#
  GRE_Special_Forces_loc1: "\n§gSPECIAL OPERATIONS FORCES§!:\n£attack_specops_texticon Special forces Attack: §G+2.00%§!\n£defence_specops_texticon Special forces Defense: §G+2.00%§!\n£specops_training_speed_texticon Special Forces Division training time: §G-10.00%§!\n"
@@ -698,7 +705,10 @@
  GRE_AirTraining_loc1: "\n§gAIR FORCE TRAINING COMMAND§!:\n£experience_neutral_training_texticon  Air Wing Training Experience Gain: §G+10.00%§!\n£home_defence_texticon  Air home defence factor: §G+10.00%§!\n"
  #AIR SUPPORT COMMAND#
  GRE_AirSupport_loc1: "\n§gAIR FORCE SUPPORT COMMAND§!:\n£experience_neutral_training_texticon  Air Wing Training Experience Gain: §G+10.00%§!\n£home_defence_texticon  Air home defence factor: §G+10.00%§!\n"
-
+ #NAVY#
+ GRE_NavyCombat_loc1: "\n§gNAVY COMBAT SUPPORT ARMS§!:\n£navy_anchor_texticon  Naval max range factor: §G+10.00%§!\n£naval_invasion_texticon  Invasion Penalty: §G-15.00%§!\n£mine_damage_texticon  Chance to hit naval mine: §G-3.00%§!\n"
+ GRE_NavyService_loc1: "\n§gNAVY SERVICE SUPPORT§!:\n£convoy_escort_texticon  Escort Efficiency: §G+10.00%§!\n£retreat_texticon  Convoy speed while retreating: §G+10.00%§!\n£naval_accident_texticon  Accident chance: §G-5.00%§!\n"
 
  GRE_greece_army_idea_tt: "[GRE_Special_Forces_loc][GRE_Combat_Support_loc][GRE_Service_Support_loc][GRE_Logistic_Corps_loc][GRE_National_Guad_loc][GRE_Military_Police_loc]"
  GRE_greece_air_idea_tt: "[GRE_AirTactical_loc][GRE_AirTraining_loc][GRE_AirSupport_loc]"
+ GRE_greece_fleet_idea_tt: "[GRE_NavyCombat_loc][GRE_NavyService_loc]"
