@@ -28,6 +28,8 @@ v1.11.3
  Content:
   - Ecuador's starting leader Jamil Mahuad with the lawyer trait
   - Galicia, Silesia, Andalucia, Canary Islands, Basque, Bavaria and Greenland can now join the EU via Internal Enlargement
+  - New game rules for countries : Estonia, Romania, Poland
+  - Minor changes in the military tree of Greece
 
  Database:
   - Adjusted Ecuador's starting election cycle from 7 years to 4 years
